added proto models and updated migrations - Eyad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/api/v0/swarm
 
 spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.generate-ddl=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/swarm_db
